fixed ticket/voucher background image

--- a/www/templates/ticketsTab.html
+++ b/www/templates/ticketsTab.html
@@ -14,7 +14,7 @@
         <div class="ticket-grid">
                 <div class="row" ng-repeat="r in [] | range:btnRows(2)">
                   <div ng-if="tickets[r*2]" class="col col-50 animated fadeInLeft">
-                    <img class="item-img" ng-src="{{tickets[r*2].order_detail.listing.image_square || 'https://s3-ap-southeast-2.amazonaws.com/bepoz-loyalty-app/000.png'}}"
+                    <img class="item-img" ng-src="{{tickets[r*2].img || 'https://s3-ap-southeast-2.amazonaws.com/bepoz-loyalty-app/000.png'}}"
                       alt="">
                     <div class="ticket-desc" ng-click="showVoucher(tickets[r*2].id)">
                       <h4>{{tickets[r*2].name}}</h4>
@@ -31,7 +31,7 @@
                     <!-- tickets[r*2] -->
                   </div>
                   <div ng-if="tickets[r*2+1]" class="col col-50 animated fadeInRight">
-                    <img class="item-img" ng-src="{{tickets[r*2+1].order_detail.listing.image_square || 'https://s3-ap-southeast-2.amazonaws.com/bepoz-loyalty-app/000.png'}}"
+                    <img class="item-img" ng-src="{{tickets[r*2+1].img || 'https://s3-ap-southeast-2.amazonaws.com/bepoz-loyalty-app/000.png'}}"
                       alt="">
                     <div class="ticket-desc" ng-click="showVoucher(tickets[r*2+1].id)">
                       <h4>{{tickets[r*2+1].name}}</h4>
