--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -121,11 +121,11 @@
           Refer a Friend
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item> -->
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/team">
+        <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/team">
           <i class="icon fa fa-users"></i>
           Our Team
           <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
+        </ion-item> -->
         <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/faq">
           <i class="icon fa fa-question-circle"></i>
           FAQ
