--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -30,7 +30,8 @@
                 <input type="password" ng-model="loginData.password" ng-required="true">
               </label>
             </div>
-            <p style="text-align:right;">
+            <p style="display: flex; justify-content: space-between;">
+              <a style="color:#292329; font-size:12px; text-transform:capitalize;" href="#/about-open">About Us</a>
               <a style="color:#292329; font-size:12px; text-transform:capitalize;" href="#/reset-password">Forgot My Password</a>
             </p>
             <button class="button button-small button-full btn-inline btn-bg sign-in-btn" ng-disabled="myForm.$invalid" ng-click="login(loginData)">
@@ -38,18 +39,26 @@
             </button>
             <div class="social-container">
               <h4 class="social-heading" style="color:#676666;">Login or Register with Socials</h4>
+
               <div class="row">
                 <div class="col social-icon-button text-right">
                   <button class="button icon" ng-click="socialMediaLogin('facebook')">
                     <i class="icon ion-social-facebook"></i>
                   </button>
                 </div>
-                <div class="col social-icon-button text-left">
+                <div class="col social-icon-button text-center">
                   <button class="button icon" ng-click="socialMediaLogin('google')">
                     <i class="icon ion-social-googleplus"></i>
                   </button>
                 </div>
+                <div class="col social-icon-button text-left">
+                    <button class="button icon" ng-click="socialMediaLogin('time-location-open')">
+                      <i class="icon fa fa-map-marker-alt"></i>
+                    </button>
+                  </div>
+                
               </div>
+
               <p class="text-center tnc" style="color: #222;">By creating an account, you agree to Bended Elbow's
                 <span ng-click="openLegaslAlert('terms_and_conditions')" class="highlight-color">Terms &amp; Conditions</span> and
                 <span ng-click="openLegaslAlert('privacy_policy')" class="highlight-color">Privacy Policy</span>.</p>
@@ -90,7 +99,7 @@
     </div> -->
     <!-- <span>V1.2 - build 1.0</span> -->
   </ion-content>
-  <div class="bar bar-footer version-footer">
+  <!-- <div class="bar bar-footer version-footer">
     ver. {{$root.appVersion || '0.2.1'}}
-  </div>
+  </div> -->
 </ion-view>
