--- a/www/templates/time-location.html
+++ b/www/templates/time-location.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false">
+<ion-view view-title="" cache-view="false">
   <ion-nav-title></ion-nav-title>
   <ion-nav-bar class="bar-color-1" align-title="center">
     <ion-nav-buttons side="left">
