--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -8,7 +8,7 @@
   <!-- <div class="top-coners-div"><div class="corner-body"></div></div> -->
   <ion-content class="main-content sign-up-content" scroll="false">
     <div style="height: 40vh; display: flex; justify-content: center; align-items: center;" class="logo animated fadeInDownBig">
-      <img ng-src="img/logo.png" alt="logo">
+      <img ng-src="img/bepoz_logo.png" alt="logo">
     </div>
 
     <div class="has-footer-container">
