--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -20,7 +20,7 @@
     <ion-header-bar>
       <!-- <h1 class="title">Left</h1> -->
       <div class="ion-menu-head text-center">
-        <img id="side-menu-logo" ng-src="img/logo.png">
+        <img id="side-menu-logo" ng-src="img/bepoz_logo.png">
         <!-- <p class="helvetica-lt" style="margin:3px auto 0 auto; font-size:11px; color:#fff;">CONNECT WITH US</p> -->
         <div ng-if="false" class="row icon-bar no-padding">
           <div class="col">
