--- a/www/css/theme.css
+++ b/www/css/theme.css
@@ -32,7 +32,7 @@ ion-view{
 }
 
 ion-view.login-view{
-  background: url('../img/bepoz_bg.png') no-repeat center;
+  background: url('../img/blackbepoz_bg.png') no-repeat center;
   background-size: cover;
 }
 
