--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -59,7 +59,7 @@
                 
               </div>
 
-              <p class="text-center tnc" style="color: #222;">By creating an account, you agree to Bended Elbow's
+              <p class="text-center tnc" style="color: #222;">By creating an account, you agree to Bepoz's
                 <span ng-click="openLegaslAlert('terms_and_conditions')" class="highlight-color">Terms &amp; Conditions</span> and
                 <span ng-click="openLegaslAlert('privacy_policy')" class="highlight-color">Privacy Policy</span>.</p>
             </div>
