--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -46,6 +46,41 @@
           Home
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/about">
+          <i class="icon fal fa-star-exclamation"></i>
+          About
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/refer">
+          <i class="icon fa fa-handshake"></i>
+          Refer a Friend
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/team">
+          <i class="icon fa fa-users"></i>
+          Our Team
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/faq">
+          <i class="icon fa fa-question-circle"></i>
+          FAQ
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/surveys">
+          <i class="icon fa fa-chart-bar"></i>
+          Surveys
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/legals">
+          <i class="icon far fa-book"></i>
+          Legals
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right no-active" ng-click="$root.logout()">
+          <i class="icon far fa-arrow-alt-from-right"></i>
+          Sign out
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
         <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/events">
           <i class="icon ems-event-icon"></i>
           Events
@@ -71,11 +106,6 @@
           Offers/Redeem
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item> -->
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/about">
-          <i class="icon fal fa-star-exclamation"></i>
-          About
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
         <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/gifts">
           <i class="icon fal fa-gift"></i>
           Gift Cards
@@ -116,41 +146,11 @@
           Partners
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item> -->
-        <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/refer">
-          <i class="icon fa fa-handshake"></i>
-          Refer a Friend
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item> -->
-        <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/team">
-          <i class="icon fa fa-users"></i>
-          Our Team
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item> -->
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/faq">
-          <i class="icon fa fa-question-circle"></i>
-          FAQ
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/surveys">
-          <i class="icon fa fa-chart-bar"></i>
-          Surveys
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/legals">
-          <i class="icon far fa-book"></i>
-          Legals
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
         <!-- <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right no-active" ng-click="goSocialLink($root.layout.side_menus[7].special_link)">
           <i class="icon far fa-globe"></i>
           View Website
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item> -->
-        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right no-active" ng-click="$root.logout()">
-          <i class="icon far fa-arrow-alt-from-right"></i>
-          Sign out
-          <i class="icon ion-chevron-right icon-accessory"></i>
-        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
