--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,7 +24,11 @@
         <ion-nav-view name="tab5"></ion-nav-view>
       </ion-tab> -->
 
-      <ion-tab title="What's on" icon-off="fa {{$root.layout.tabs[1].icon}}" icon-on="fa {{$root.layout.tabs[1].icon}}" href="#/menu/tabs/vouchers">
+      <!-- <ion-tab title="What's on" icon-off="fa {{$root.layout.tabs[1].icon}}" icon-on="fa {{$root.layout.tabs[1].icon}}" href="#/menu/tabs/vouchers">
+        <ion-nav-view name="tab-whats"></ion-nav-view>
+      </ion-tab> -->
+
+      <ion-tab title="What's on" icon-off="fa {{$root.layout.tabs[1].icon}}" icon-on="fa {{$root.layout.tabs[1].icon}}" href="#/menu/tabs/whats">
         <ion-nav-view name="tab-whats"></ion-nav-view>
       </ion-tab>
 
