creating feedback in menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -76,6 +76,11 @@
           Legals
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/feedback">
+          <i class="icon far fa-comment-alt"></i>
+          Feedback
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
         <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right no-active" ng-click="$root.logout()">
           <i class="icon far fa-arrow-alt-from-right"></i>
           Sign out
