adding feedback menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -66,6 +66,11 @@
           FAQ
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item>
+        <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/feedbacks">
+          <i class="icon fa fa-comment-alt"></i>
+          Feedbacks
+          <i class="icon ion-chevron-right icon-accessory"></i>
+        </ion-item>
         <ion-item menu-close class="item-icon-left helvetica-nenue-lt-light icon-pull-right" href="#/menu/surveys">
           <i class="icon fa fa-chart-bar"></i>
           Surveys
